--- a/bower.json
+++ b/bower.json
@@ -27,8 +27,8 @@
     "test"
   ],
   "dependencies": {
-      "polymer": "Polymer/polymer#1.0.x",
-      "myscript": "1.1.x"
+    "polymer": "Polymer/polymer#1.0.x",
+    "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#3cb3123033d775a263e1b2bb36c84862aee25fbf"
   },
   "devDependencies": {
     "iron-component-page": "polymerelements/iron-component-page#1.0.x",
