--- a/bower.json
+++ b/bower.json
@@ -1,37 +1,38 @@
 {
-  "name": "myscript-ink-paper",
-  "version": "1.1.0-beta3",
-  "description": "MyScript Ink Paper to help developer for integrate handwriting recognition.",
-  "keywords": [
-    "web-component",
-    "web-components",
-    "polymer",
-    "myscript",
-    "myscriptjs",
-    "myscriptwebcomponents",
-    "handwriting",
-    "recognition"
-  ],
-  "main": "myscript-ink-paper.html",
-  "license": "Apache-2",
-  "homepage": "https://github.com/MyScriptWebComponents/myscript-ink-paper/",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/MyScriptWebComponents/myscript-ink-paper.git"
-  },
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "tests",
-    "test"
-  ],
-  "dependencies": {
-    "polymer": "Polymer/polymer#1.0.x",
-    "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#1.1.x"
-  },
-  "devDependencies": {
-    "iron-component-page": "polymerelements/iron-component-page#1.0.x",
-    "web-component-tester": "*"
-  }
+    "name": "myscript-ink-paper",
+    "version": "1.1.0-beta3",
+    "description": "MyScript Ink Paper to help developer for integrate handwriting recognition.",
+    "keywords": [
+        "web-component",
+        "web-components",
+        "polymer",
+        "myscript",
+        "myscriptjs",
+        "myscriptwebcomponents",
+        "handwriting",
+        "recognition"
+    ],
+    "main": "myscript-ink-paper.html",
+    "license": "Apache-2",
+    "homepage": "https://github.com/MyScriptWebComponents/myscript-ink-paper/",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/MyScriptWebComponents/myscript-ink-paper.git"
+    },
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "tests",
+        "test"
+    ],
+    "dependencies": {
+        "polymer": "Polymer/polymer#1.0.x",
+        "iron-resizable-behavior": "polymerelements/iron-resizable-behavior#1.0.x",
+        "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#1.1.x"
+    },
+    "devDependencies": {
+        "iron-component-page": "polymerelements/iron-component-page#1.0.x",
+        "web-component-tester": "*"
+    }
 }
