--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,10 @@
     },
     "devDependencies": {
         "iron-component-page": "polymerelements/iron-component-page#1.0.x",
+        "iron-localstorage": "PolymerElements/iron-localstorage#1.0.x",
+        "iron-icons": "polymerelements/iron-icons#1.0.x",
+        "paper-fab": "polymerelements/paper-fab#1.0.x",
+        "paper-toast": "polymerelements/paper-toast#1.0.x",
         "web-component-tester": "*"
     }
 }
