--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-    "name": "myscript-ink-paper",
-    "version": "1.1.0-beta5",
-    "description": "MyScript Ink Paper to help developer for integrate handwriting recognition.",
+    "name": "myscript-common-element",
+    "version": "1.1.0-beta6",
+    "description": "MyScript Common Element to help developer for integrate handwriting recognition.",
     "keywords": [
         "web-component",
         "web-components",
@@ -12,12 +12,12 @@
         "handwriting",
         "recognition"
     ],
-    "main": "myscript-ink-paper.html",
+    "main": "myscript-common-element.html",
     "license": "Apache-2",
-    "homepage": "https://github.com/MyScriptWebComponents/myscript-ink-paper/",
+    "homepage": "https://github.com/MyScript/myscript-common-element/",
     "repository": {
         "type": "git",
-        "url": "git://github.com/MyScriptWebComponents/myscript-ink-paper.git"
+        "url": "git://github.com/MyScript/myscript-common-element.git"
     },
     "ignore": [
         "**/.*",
