--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "myscript-common-element",
-    "version": "1.1.0-beta7",
+    "version": "1.1.0",
     "description": "MyScript Common Element to help developer for integrate handwriting recognition.",
     "keywords": [
         "web-component",
