--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "dependencies": {
         "polymer": "Polymer/polymer#1.1.x",
         "iron-resizable-behavior": "polymerelements/iron-resizable-behavior#1.0.x",
-        "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#1.1.x"
+        "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#master"
     },
     "devDependencies": {
         "iron-component-page": "polymerelements/iron-component-page#1.0.x",
