--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "myscript-common-element",
     "version": "1.1.0",
-    "description": "MyScript Common Element to help developer for integrate handwriting recognition.",
+    "description": "HTML5 Element easing integration of MyScript handwriting recognition in your web-page",
     "keywords": [
         "myscript"
     ],
@@ -20,12 +20,12 @@
         "test"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#1.1.x",
-        "iron-resizable-behavior": "polymerelements/iron-resizable-behavior#1.0.x",
-        "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#master"
+        "polymer": "Polymer/polymer#1.2.x",
+        "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#1.0.x",
+        "myscript": "myscript#1.1.x"
     },
     "devDependencies": {
-        "iron-component-page": "polymerelements/iron-component-page#1.0.x",
+        "iron-component-page": "PolymerElements/iron-component-page#1.0.x",
         "web-component-tester": "*"
     }
 }
