--- a/.editorconfig
+++ b/.editorconfig
@@ -2,14 +2,26 @@
 # It's saved automatically as you type.
 # You can find docs at http://editorconfig.org
 
+root = true
+
 [*]
-charset = utf-8
+
+# Change these settings to your own preference
 indent_style = space
 indent_size = 4
-tab_width = 4
+
+# We recommend you to keep these unchanged
 end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[{package,bower}.json]
+indent_style = space
+indent_size = 2
+
+[Makefile]
+indent_style = tab
