--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
     "dependencies": {
         "polymer": "Polymer/polymer#1.4.x",
         "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#1.0.x",
-        "myscript": "myscript#1.2.x"
+        "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#1.2.x"
     },
     "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#1.1.x",
