--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "dependencies": {
         "polymer": "Polymer/polymer#1.4.x",
         "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#1.0.x",
+        "iron-icons": "PolymerElements/iron-icons#1.1.x",
+        "paper-fab": "PolymerElements/paper-fab#1.2.x",
         "paper-toast": "PolymerElements/paper-toast#1.2.x",
         "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#master"
     },
