--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
         "iron-icons": "PolymerElements/iron-icons#1.1.x",
         "paper-fab": "PolymerElements/paper-fab#1.2.x",
         "paper-toast": "PolymerElements/paper-toast#1.2.x",
-        "myscript": "https://zen.visionobjects.com/git/WS/MyScriptJS.git#master"
+        "myscript": "https://scm.corp.myscript.com/scm/ws/myscriptjs.git#master"
     },
     "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#1.1.x"
