--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
   "name": "myscript-common-element",
-  "version": "1.2.0",
   "description": "HTML5 Element easing integration of MyScript handwriting recognition in your web-page",
   "keywords": [
     "myscript"
@@ -25,12 +24,9 @@
     "iron-icons": "PolymerElements/iron-icons#1.1.x",
     "paper-fab": "PolymerElements/paper-fab#1.2.x",
     "paper-toast": "PolymerElements/paper-toast#1.2.x",
-    "myscript": "myscript#1.2.0"
+    "myscript": "myscript#master"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1.1.x"
-  },
-  "resolutions": {
-    "polymer": "1.4.x"
   }
 }
