--- a/docs/components/myscript-common-element/Makefile
+++ b/docs/components/myscript-common-element/Makefile
@@ -4,7 +4,7 @@ ALL: clean prepare docker test
 
 .PHONY: ALL \
 	purge clean prepare \
-	watch dev
+	watch dev docs
 
 purge:
 	@rm -rf bower_components/
@@ -27,7 +27,7 @@ watch:
 dev:
 	@polyserve
 
-doc:
+docs:
 	@rm -rf docs/components/* && mkdir -p docs/components
 	@cd docs && bower install -q ../../myscript-common-element
 	@cp -r bower_components/* docs/components/
