--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   },
   "ignore": [
     "*",
+    "!*.svg",
     "!LICENSE",
     "!myscript-common-element.html",
     "!myscript-languages-element.html",
@@ -32,7 +33,7 @@
     "iron-icons": "PolymerElements/iron-icons#1.2.x",
     "paper-fab": "PolymerElements/paper-fab#1.2.x",
     "paper-toast": "PolymerElements/paper-toast#1.3.x",
-    "myscript": "git://github.com/MyScript/MyScriptJS.git#2.0.0-alpha1",
+    "myscript": "2.0.0-alpha1",
     "pepjs": "^0.4.2"
   },
   "devDependencies": {
