[FIX] fixes missing bower exception for theme

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "cache-clean": "bower cache clean",
     "install": "bower install",
-    "analyze": "polymer analyze myscript-common-element.html myscript-languages-element.html > analysis.json",
+    "analyze": "polymer analyze myscript-common-element.html myscript-languages-element.html myscript-stylesheet.html > analysis.json",
     "start": "polymer serve"
   }
 }
