--- a/docs/components/polymer/package.json
+++ b/docs/components/polymer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polymer/polymer",
-  "version": "2.0.2",
+  "version": "2.0.1",
   "description": "The Polymer library makes it easy to create your own web components. Give your element some markup and properties, and then use it on a site. Polymer provides features like dynamic templates and data binding to reduce the amount of boilerplate you need to write",
   "main": "polymer.html",
   "directories": {
@@ -8,14 +8,13 @@
     "test": "test"
   },
   "devDependencies": {
-    "@polymer/gen-closure-declarations": "^0.1.0",
     "@webcomponents/shadycss": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^1.0.2",
-    "babel-preset-babili": "^0.1.4",
-    "del": "^3.0.0",
-    "dom5": "^2.3.0",
+    "@webcomponents/webcomponentsjs": "^1.0.0",
+    "babel-preset-babili": "0.0.12",
+    "del": "^2.2.1",
+    "dom5": "^1.3.1",
     "eslint-plugin-html": "^2.0.1",
-    "google-closure-compiler": "^20170626.0.0",
+    "google-closure-compiler": "^20170409.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
@@ -24,15 +23,15 @@
     "gulp-vulcanize": "^6.0.1",
     "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.1",
-    "parse5": "^3.0.2",
-    "polymer-build": "^1.6.0",
+    "polymer-build": "^1.1.0",
     "run-sequence": "^1.1.0",
     "through2": "^2.0.0",
     "web-component-tester": "^6.0.0-prerelease.4"
   },
   "scripts": {
     "build": "gulp",
-    "test": "gulp lint && wct"
+    "test": "gulp lint && wct",
+    "test-build": "gulp switch && wct && gulp restore"
   },
   "repository": {
     "type": "git",
