--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "files": [
     "myscript-common-element.js",
     "myscript-languages-element.js",
+    "myscript-stylesheet.js",
     "*.svg"
   ],
   "main": "myscript-common-element.html",
