--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "web-animations-js": "^2.3.1"
   },
   "scripts": {
-    "cache-clean": "npm cache clean",
-    "analyze": "polymer analyze myscript-common-element.html myscript-languages-element.html myscript-stylesheet.html > analysis.json",
-    "start": "polymer serve"
+    "analyze": "polymer analyze myscript-common-element.js myscript-languages-element.js myscript-stylesheet.js > analysis.json",
+    "start": "polymer serve",
+    "build": "polymer build"
   }
 }
