[FIX] Add sequential execution for docs

--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "analyze": "polymer analyze myscript-common-element.js myscript-languages-element.js myscript-stylesheet.js > analysis.json",
     "start": "polymer serve",
     "build": "polymer build",
-    "docs": "npm run analyze & npm run build"
+    "docs": "npm run analyze && npm run build"
   }
 }
