--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/MyScript/myscript-common-element/",
   "dependencies": {
     "@polymer/polymer": "^3.0.0-pre.13",
-    "myscript": "github:myscript/myscriptjs#master",
+    "myscript": "^4.2.0",
     "@polymer/iron-resizable-behavior": "^3.0.0-pre.19",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "@polymer/paper-toast": "^3.0.0-pre.19"
