--- a/package.json
+++ b/package.json
@@ -25,24 +25,26 @@
   "license": "Apache-2",
   "homepage": "https://github.com/MyScript/myscript-common-element/",
   "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.13",
-    "myscript": "^4.3.0",
-    "@polymer/iron-resizable-behavior": "^3.0.0-pre.19",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "@polymer/paper-toast": "^3.0.0-pre.19"
+    "@polymer/iron-icons": "^3.0.1",
+    "@polymer/iron-resizable-behavior": "^3.0.1",
+    "@polymer/paper-toast": "^3.0.1",
+    "@polymer/polymer": "^3.1.0",
+    "@webcomponents/webcomponentsjs": "^2.2.1",
+    "myscript": "MyScript/MyScriptJS#master"
   },
   "devDependencies": {
-    "@polymer/iron-component-page": "^3.0.0-pre.19",
-    "@polymer/paper-button": "^3.0.0-pre.19",
-    "@polymer/paper-slider": "^3.0.0-pre.19",
-    "@polymer/paper-swatch-picker": "^3.0.0-pre.19",
-    "@polymer/paper-fab": "^3.0.0-pre.19",
-    "@polymer/paper-toggle-button": "^3.0.0-pre.19",
+    "@polymer/iron-component-page": "^4.0.1",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-fab": "^3.0.1",
+    "@polymer/paper-slider": "^3.0.1",
+    "@polymer/paper-swatch-picker": "^3.0.1",
+    "@polymer/paper-toggle-button": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-import": "^0.13.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "web-animations-js": "^2.3.1"
   },
   "scripts": {
